cleaned up the event bus, and set up foundation for systems

--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -143,9 +143,11 @@
     <ClCompile Include="arbrook\logging\loggingservice.cpp" />
     <ClCompile Include="arbrook\engine\services\service.cpp" />
     <ClCompile Include="arbrook\logging\logging.cpp" />
-    <ClCompile Include="arbrook\modules\rendermodule.cpp" />
+    <ClCompile Include="arbrook\modules\module.cpp" />
     <ClCompile Include="arbrook\modules\testmodule.cpp" />
+    <ClCompile Include="arbrook\modules\windowmodule.cpp" />
     <ClCompile Include="arbrook\scheduler\scheduler.cpp" />
+    <ClCompile Include="arbrook\systems\system.cpp" />
     <ClCompile Include="arbrook\types\type_util.cpp" />
     <ClCompile Include="arbrook\Arbrook.cpp" />
     <ClCompile Include="arbrook\engine\program.cpp" />
@@ -170,10 +172,12 @@
     <ClInclude Include="arbrook\logging\logging.hpp" />
     <ClInclude Include="arbrook\math\math.hpp" />
     <ClInclude Include="arbrook\modules\module.hpp" />
-    <ClInclude Include="arbrook\modules\rendermodule.hpp" />
     <ClInclude Include="arbrook\modules\testmodule.hpp" />
+    <ClInclude Include="arbrook\modules\windowmodule.hpp" />
     <ClInclude Include="arbrook\platform\platform.hpp" />
     <ClInclude Include="arbrook\scheduler\scheduler.hpp" />
+    <ClInclude Include="arbrook\systems\system.hpp" />
+    <ClInclude Include="arbrook\systems\testsystem.hpp" />
     <ClInclude Include="arbrook\types\meta.hpp" />
     <ClInclude Include="arbrook\types\primitives.hpp" />
     <ClInclude Include="arbrook\types\types.hpp" />
@@ -183,7 +187,9 @@
     <None Include="arbrook\common\hash.inl" />
     <None Include="arbrook\engine\services\serviceregistry.inl" />
     <None Include="arbrook\events\eventbus.inl" />
+    <None Include="arbrook\modules\module.inl" />
     <None Include="arbrook\scheduler\scheduler.inl" />
+    <None Include="arbrook\systems\system.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
