--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -107,7 +107,7 @@
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <AdditionalIncludeDirectories>C:\vcpkg\installed\x64-windows-static\include;$(SolutionDir)arbrook;$(SolutionDir)external_include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\vcpkg\installed\x64-windows-static\include;$(SolutionDir)arbrook;$(SolutionDir)external_include;$(SolutionDir)external_include\rsl\src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -126,7 +126,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <AdditionalIncludeDirectories>C:\vcpkg\installed\x64-windows-static\include;$(SolutionDir)arbrook;$(SolutionDir)external_include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\vcpkg\installed\x64-windows-static\include;$(SolutionDir)arbrook;$(SolutionDir)external_include;$(SolutionDir)external_include\rsl\src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -151,13 +151,12 @@
     <ClCompile Include="arbrook\types\type_util.cpp" />
     <ClCompile Include="arbrook\Arbrook.cpp" />
     <ClCompile Include="arbrook\engine\program.cpp" />
+    <ClCompile Include="external_include\rsl\src\rythe\delete_me.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="arbrook\common\hash.hpp" />
     <ClInclude Include="arbrook\common\string_extra.hpp" />
     <ClInclude Include="arbrook\common\string_literal.hpp" />
-    <ClInclude Include="arbrook\containers\delegate.hpp" />
-    <ClInclude Include="arbrook\containers\iterator_tricks.hpp" />
     <ClInclude Include="arbrook\containers\pointer.hpp" />
     <ClInclude Include="arbrook\ecs\handles\entity.hpp" />
     <ClInclude Include="arbrook\ecs\data\entity_data.hpp" />
@@ -182,6 +181,14 @@
     <ClInclude Include="arbrook\types\primitives.hpp" />
     <ClInclude Include="arbrook\types\types.hpp" />
     <ClInclude Include="arbrook\types\type_util.hpp" />
+    <ClInclude Include="external_include\rsl\src\rythe\impl\concepts.hpp" />
+    <ClInclude Include="external_include\rsl\src\rythe\impl\delegate.hpp" />
+    <ClInclude Include="external_include\rsl\src\rythe\impl\delegate_base.hpp" />
+    <ClInclude Include="external_include\rsl\src\rythe\impl\hash.hpp" />
+    <ClInclude Include="external_include\rsl\src\rythe\impl\multicast_delegate.hpp" />
+    <ClInclude Include="external_include\rsl\src\rythe\impl\primitives.hpp" />
+    <ClInclude Include="external_include\rsl\src\rythe\impl\type_util.hpp" />
+    <ClInclude Include="external_include\rsl\src\rythe\impl\utilities.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="arbrook\common\hash.inl" />
@@ -190,6 +197,12 @@
     <None Include="arbrook\modules\module.inl" />
     <None Include="arbrook\scheduler\scheduler.inl" />
     <None Include="arbrook\systems\system.inl" />
+    <None Include="external_include\rsl\src\rythe\concepts" />
+    <None Include="external_include\rsl\src\rythe\delegate" />
+    <None Include="external_include\rsl\src\rythe\hash" />
+    <None Include="external_include\rsl\src\rythe\primitives" />
+    <None Include="external_include\rsl\src\rythe\type_util" />
+    <None Include="external_include\rsl\src\rythe\utilities" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
