--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -137,6 +137,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="arbrook\common\hash.cpp" />
     <ClCompile Include="arbrook\ecs\registry.cpp" />
     <ClCompile Include="arbrook\events\eventbus.cpp" />
     <ClCompile Include="arbrook\logging\loggingservice.cpp" />
@@ -147,17 +148,17 @@
     <ClCompile Include="arbrook\modules\windowmodule.cpp" />
     <ClCompile Include="arbrook\scheduler\scheduler.cpp" />
     <ClCompile Include="arbrook\systems\system.cpp" />
-    <ClCompile Include="arbrook\types\type_util.cpp" />
+    <ClCompile Include="arbrook\systems\testsystem.cpp" />
     <ClCompile Include="arbrook\Arbrook.cpp" />
     <ClCompile Include="arbrook\engine\program.cpp" />
     <ClCompile Include="external_include\rsl\src\rythe\delete_me.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="arbrook\common\hash.hpp" />
     <ClInclude Include="arbrook\common\string_extra.hpp" />
     <ClInclude Include="arbrook\common\string_literal.hpp" />
     <ClInclude Include="arbrook\containers\pointer.hpp" />
-    <ClInclude Include="arbrook\ecs\handles\entity.hpp" />
-    <ClInclude Include="arbrook\ecs\data\entity_data.hpp" />
+    <ClInclude Include="arbrook\ecs\entity.hpp" />
     <ClInclude Include="arbrook\ecs\registry.hpp" />
     <ClInclude Include="arbrook\engine\program.hpp" />
     <ClInclude Include="arbrook\events\defaults\exit_event.hpp" />
@@ -176,9 +177,6 @@
     <ClInclude Include="arbrook\systems\system.hpp" />
     <ClInclude Include="arbrook\systems\testsystem.hpp" />
     <ClInclude Include="arbrook\types\meta.hpp" />
-    <ClInclude Include="arbrook\types\primitives.hpp" />
-    <ClInclude Include="arbrook\types\types.hpp" />
-    <ClInclude Include="arbrook\types\type_util.hpp" />
     <ClInclude Include="external_include\rsl\src\rythe\impl\concepts.hpp" />
     <ClInclude Include="external_include\rsl\src\rythe\impl\delegate.hpp" />
     <ClInclude Include="external_include\rsl\src\rythe\impl\delegate_base.hpp" />
@@ -189,6 +187,7 @@
     <ClInclude Include="external_include\rsl\src\rythe\impl\utilities.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="arbrook\common\hash.inl" />
     <None Include="arbrook\engine\services\serviceregistry.inl" />
     <None Include="arbrook\events\eventbus.inl" />
     <None Include="arbrook\modules\module.inl" />
