--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -137,7 +137,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="arbrook\common\hash.cpp" />
     <ClCompile Include="arbrook\ecs\registry.cpp" />
     <ClCompile Include="arbrook\events\eventbus.cpp" />
     <ClCompile Include="arbrook\logging\loggingservice.cpp" />
@@ -154,10 +153,11 @@
     <ClCompile Include="external_include\rsl\src\rythe\delete_me.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="arbrook\common\hash.hpp" />
     <ClInclude Include="arbrook\common\string_extra.hpp" />
     <ClInclude Include="arbrook\common\string_literal.hpp" />
     <ClInclude Include="arbrook\containers\pointer.hpp" />
+    <ClInclude Include="arbrook\ecs\component.hpp" />
+    <ClInclude Include="arbrook\ecs\componentpool.hpp" />
     <ClInclude Include="arbrook\ecs\entity.hpp" />
     <ClInclude Include="arbrook\ecs\registry.hpp" />
     <ClInclude Include="arbrook\engine\program.hpp" />
@@ -187,7 +187,8 @@
     <ClInclude Include="external_include\rsl\src\rythe\impl\utilities.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="arbrook\common\hash.inl" />
+    <None Include="arbrook\ecs\component.inl" />
+    <None Include="arbrook\ecs\registry.inl" />
     <None Include="arbrook\engine\services\serviceregistry.inl" />
     <None Include="arbrook\events\eventbus.inl" />
     <None Include="arbrook\modules\module.inl" />
