trying to use std::any for a void* like that has type_info. might go back to void*

--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -137,6 +137,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="arbrook\ecs\component_family_base.cpp" />
     <ClCompile Include="arbrook\ecs\registry.cpp" />
     <ClCompile Include="arbrook\events\eventbus.cpp" />
     <ClCompile Include="arbrook\logging\loggingservice.cpp" />
@@ -156,8 +157,9 @@
     <ClInclude Include="arbrook\common\string_extra.hpp" />
     <ClInclude Include="arbrook\common\string_literal.hpp" />
     <ClInclude Include="arbrook\containers\pointer.hpp" />
-    <ClInclude Include="arbrook\ecs\component.hpp" />
     <ClInclude Include="arbrook\ecs\component_base.hpp" />
+    <ClInclude Include="arbrook\ecs\component_family.hpp" />
+    <ClInclude Include="arbrook\ecs\component_family_base.hpp" />
     <ClInclude Include="arbrook\ecs\entity.hpp" />
     <ClInclude Include="arbrook\ecs\registry.hpp" />
     <ClInclude Include="arbrook\engine\program.hpp" />
@@ -187,7 +189,7 @@
     <ClInclude Include="external_include\rsl\src\rythe\impl\utilities.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="arbrook\ecs\component.inl" />
+    <None Include="arbrook\ecs\component_family.inl" />
     <None Include="arbrook\ecs\entity.inl" />
     <None Include="arbrook\ecs\registry.inl" />
     <None Include="arbrook\engine\services\serviceregistry.inl" />
