--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="arbrook\ecs\filter.hpp" />
     <ClInclude Include="arbrook\ecs\registry.hpp" />
     <ClInclude Include="arbrook\engine\program.hpp" />
+    <ClInclude Include="arbrook\events\defaults\component_event.hpp" />
     <ClInclude Include="arbrook\events\defaults\exit_event.hpp" />
     <ClInclude Include="arbrook\events\event.hpp" />
     <ClInclude Include="arbrook\events\eventbus.hpp" />
