--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="arbrook\systems\rendersystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="arbrook\systems\flipsystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="arbrook\ecs\entity.hpp">
@@ -171,6 +174,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="arbrook\systems\rendersystem.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\systems\flipsystem.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
