--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -188,6 +188,9 @@
     <ClInclude Include="arbrook\core\events\events.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="arbrook\rendering\pipeline\pipeline_base.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="arbrook\core\engine\services\serviceregistry.inl">
